raffia/tests/error/less/value/unsupported-string-in-custom-property.snap
---
source: raffia/tests/error.rs
---
error: expect token `(`, but found `{`
  ┌─ unsupported-string-in-custom-property.less:1:3
  │
1 │ a {
  │   ^


